syntax = "proto3";

option csharp_namespace = "MVC_FrontEnd";

package model;


message NewsProto{
	int32 id = 1;
	string title = 2;
	string contentShort = 3; 
	string content = 4;
}

message NewsListProto{
	repeated NewsProto NewsProto = 1;
}